0.04 Not Released

 * Use the default MANIFEST.SKIP file from ExtUtils::Manifest.

 * Format CHANGES according to CPAN::Changes::Spec. Add test file
   t/release-cpan-changes.t.

 * Fix typo in Makefile.PL (Math::Float -> Math::BigFloat).

 * Only prompt when run interactively.

 * Increment version number.

0.03 2016-12-08

 * Notify the world that this distribution is redundant.

 * Add required versions of Test::More and Math::BigInt to Makefile.PL.

0.02 2010-09-16

 * Parts.pm: Changed namespace from Math::BigInt to
   Math::BigInt::Parts. The documentation says how to use the
   Math::BigInt::Parts functions as Math::BigInt methods.

 * Parts.pm: Added URLs to documentation

 * Parts.pm: Miscellaneous code reformatting.

 * Parts.pm: Switched to UTF-8 encoding.

 * Parts.pm: Modernization: 'use vars ...' replaced by 'our ...'.

 * Add testfiles for POD.

 * Included signature. For testing signature, the TEST_SIGNATURE
   environment variable must be set.

 * Parts.pm: Increased version number.

0.01 2006-09-24

 * First version, released on an unsuspecting world.